Comment test sequences in squid notebook

--- a/4_generalization/2_run_squid.ipynb
+++ b/4_generalization/2_run_squid.ipynb
@@ -246,8 +246,8 @@
    "outputs": [],
    "source": [
     "# Test with 1 sequence only\n",
-    "seqs = {'chr1:972761-973740(+)_ENST00000379410': seqs['chr1:972761-973740(+)_ENST00000379410']}\n",
-    "ss_idx = {'chr1:972761-973740(+)_ENST00000379410': ss_idx['chr1:972761-973740(+)_ENST00000379410']}"
+    "# seqs = {'chr1:972761-973740(+)_ENST00000379410': seqs['chr1:972761-973740(+)_ENST00000379410']}\n",
+    "# ss_idx = {'chr1:972761-973740(+)_ENST00000379410': ss_idx['chr1:972761-973740(+)_ENST00000379410']}"
    ]
   },
   {
