Scan motifs for all seqs

--- a/4_generalization/3_run_motif_scanning.ipynb
+++ b/4_generalization/3_run_motif_scanning.ipynb
@@ -35,7 +35,7 @@
     "    files = [f for f in glob.glob(evolutions_path + \"/*_dataset.csv.gz\")]\n",
     "    uniq_basenames = sorted(list(set([f.split('/')[-1].split('_seed')[0] for f in files])))\n",
     "\n",
-    "    for bn in uniq_basenames[:1]:\n",
+    "    for bn in uniq_basenames:\n",
     "\n",
     "        dataset = Dataset(glob.glob(f\"{evolutions_path}/{bn}*_dataset.csv.gz\"))\n",
     "\n",
